k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-parse-service
  labels:
    app: pdf-parse-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: pdf-parse-service
