k8s-manifests/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: pdf-parse-service
  name: pdf-parse-service
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "off"
spec:
  rules:
    - host: pdf-to-markdown.YOUR-DOMAIN
      http:
        paths:
          - backend:
              service:
                name: pdf-parse-service
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pdf-to-markdown.YOUR-DOMAIN
      secretName: tls.YOUR-DOMAIN
